<resources>
    <string name="app_name">EditCredit Demo</string>
    <string name="separators_label">Separators:</string>
    <string name="no_separators">No Separators</string>
    <string name="spaces">Spaces</string>
    <string name="dashes">Dashes</string>
    <string name="validate_card_number">Validate Card Number</string>
    <string name="get_number_without_separators">Get number without separators</string>
    <string name="get_type">Get Card Type</string>
    <string name="disabled_cards_label">Disabled Cards:</string>
    <string name="visa">Visa</string>
    <string name="mastercard">MasterCard</string>
    <string name="american_express">American Express</string>
    <string name="discover">Discover</string>
    <string name="diners_club_international">Diners Club International</string>
    <string name="unknown">Unknown</string>
    <string name="gravity_label">Gravity:</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
</resources>
