<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mostafa.ma.saleh.gmail.com.editcreditdemo.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <mostafa.ma.saleh.gmail.com.editcredit.EditCredit
            android:id="@+id/editCredit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/gravity_label"
                    android:textColor="@color/colorAccent" />

                <RadioGroup
                    android:id="@+id/gravityRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:checkedButton="@+id/endRadioButton">

                    <RadioButton
                        android:id="@+id/startRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/start" />

                    <RadioButton
                        android:id="@+id/endRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/end" />

                    <RadioButton
                        android:id="@+id/leftRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/left" />

                    <RadioButton
                        android:id="@+id/rightRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right" />
                </RadioGroup>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/separators_label"
                    android:textColor="@color/colorAccent" />

                <RadioGroup
                    android:id="@+id/separatorsRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:checkedButton="@+id/noSeparatorsRadioButton">

                    <RadioButton
                        android:id="@+id/noSeparatorsRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_separators" />

                    <RadioButton
                        android:id="@+id/spacesRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/spaces" />

                    <RadioButton
                        android:id="@+id/dashesRadioButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashes" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:text="@string/disabled_cards_label"
                    android:textColor="@color/colorAccent" />

                <CheckBox
                    android:id="@+id/visaCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/visa" />

                <CheckBox
                    android:id="@+id/masterCardCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mastercard" />

                <CheckBox
                    android:id="@+id/americanExpressCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/american_express" />

                <CheckBox
                    android:id="@+id/discoverCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/discover" />

                <CheckBox
                    android:id="@+id/dinersCheckBox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/diners_club_international" />
            </LinearLayout>
        </TableRow>

        <Button
            android:id="@+id/validateButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate_card_number"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/getNumberButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_number_without_separators"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/getTypeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_type"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>